src/objects/inscor__Sales_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>Exchange_PPW_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exchange PPW Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exp_PN_for_Ex_Agreement__c</fullName>
        <formula>IF(  ISBLANK(inscor__Expected_Core_PN__c) , NULL ,  inscor__Expected_Core_PN__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exp PN for Ex Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_Copy__c</fullName>
        <formula>inscor__Product__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PN Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>exchange_type_lockup__c</fullName>
        <formula>TEXT(inscor__Exchange_Type__c)</formula>
        <label>exchange type lockup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company_Currency__c</fullName>
        <label>Company Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Line_Total__c</fullName>
        <formula>inscor__Quantity_Ordered__c *  inscor__Company_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Company Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Company_Price__c</fullName>
        <formula>inscor__Price__c /  BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <label>Company Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Core_Disposition__c</fullName>
        <label>Core Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Overhaul</fullName>
                </value>
                <value>
                    <fullName>Serviceable</fullName>
                </value>
                <value>
                    <fullName>Receive ‘As Is’</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Core_Due_Date__c</fullName>
        <label>Core Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Core_Due__c</fullName>
        <label>Core Due (In Days)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Reference_Line__c</fullName>
        <label>Customer Reference Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Customer_Reference_Number__c</fullName>
        <label>Customer Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Due_Date__c</fullName>
        <inlineHelpText>Due at Customer</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Type__c</fullName>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Exchange_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Expected_Core_Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Core Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>Sales Order Lines (Expected Core Condition Code)</relationshipLabel>
        <relationshipName>Sales_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Expected_Core_PN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expected Core PN</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Order Lines (Expected Core PN)</relationshipLabel>
        <relationshipName>Sales_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Expected_Core_Serial_Number__c</fullName>
        <label>Expected Core Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Expected_Ship_Date__c</fullName>
        <description>expected ship date</description>
        <inlineHelpText>Our best guess of the date we will ship.</inlineHelpText>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_rt__c</fullName>
        <label>External Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Fully_Allocated_Date__c</fullName>
        <description>Date when sales order line was fully allocated</description>
        <inlineHelpText>Date when sales order line was fully allocated</inlineHelpText>
        <label>Fully Allocated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_rt__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Keyword__c</fullName>
        <formula>inscor__Product__r.inscor__Keyword__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Keyword</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Kit_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kit List</label>
        <referenceTo>inscor__Kit_List__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Number__c</fullName>
        <inlineHelpText>If renumbering the lines, please be cognizant of existing Releases, Receipts, Allocations, Invoices, and other related lines as they may continue referencing the original line number. You will need to edit those as well.</inlineHelpText>
        <label>Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Line_Total__c</fullName>
        <formula>inscor__Quantity_Ordered__c *  inscor__Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Line Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Managed_Repair_Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managed Repair Owner Code</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Spec Owner code allowed</errorMessage>
            <filterItems>
                <field>inscor__Owner_Code__c.inscor__Lot_Purchase__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>inscor__Owner_Code__c.inscor__Consignment__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Managed_Repair_Status__c</fullName>
        <label>Managed Repair Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Managed_Repair_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Outright</fullName>
                    <default>true</default>
                    <label>Outright</label>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Send Repaired</fullName>
                </value>
                <value>
                    <fullName>Return Core</fullName>
                </value>
                <value>
                    <fullName>Return Part</fullName>
                </value>
                <value>
                    <fullName>Core Repair</fullName>
                </value>
                <value>
                    <fullName>Managed Repair</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Order__c</fullName>
        <label>Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipName>Order_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>inscor__Outright_Company_Price__c</fullName>
        <formula>inscor__Outright_Price__c / BLANKVALUE(inscor__Exchange_Rate__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outright Company Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Outright_Price__c</fullName>
        <label>Outright Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Parent_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Line</label>
        <referenceTo>inscor__Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Estimate</fullName>
                </value>
                <value>
                    <fullName>NTE</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Material</fullName>
                </value>
                <value>
                    <fullName>Flat Rate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Promised_Date__c</fullName>
        <inlineHelpText>Date calculated from quoted delivery</inlineHelpText>
        <label>Promised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Allocated__c</fullName>
        <label>Quantity Allocated</label>
        <summarizedField>inscor__Allocation__c.inscor__Quantity_Allocated__c</summarizedField>
        <summaryForeignKey>inscor__Allocation__c.inscor__Sales_Order_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Invoiced__c</fullName>
        <label>Quantity Invoiced</label>
        <summarizedField>inscor__Allocation__c.inscor__Quantity_Invoiced__c</summarizedField>
        <summaryForeignKey>inscor__Allocation__c.inscor__Sales_Order_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Open__c</fullName>
        <formula>inscor__Quantity_Ordered__c - inscor__Quantity_Allocated__c -  inscor__Quantity_Shipped__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Returned1__c</fullName>
        <label>Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Shipped__c</fullName>
        <label>Quantity Shipped</label>
        <summarizedField>inscor__Allocation__c.inscor__Quantity_Shipped__c</summarizedField>
        <summaryForeignKey>inscor__Allocation__c.inscor__Sales_Order_Line__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_on_RMAs__c</fullName>
        <label>Quantity on RMA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quote_Line_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Line Number</label>
        <referenceTo>inscor__Customer_Quote_Line__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quoted_Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quoted Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quoted_TAT__c</fullName>
        <inlineHelpText>Turn around time in days.</inlineHelpText>
        <label>Quoted TAT</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Rate_Date__c</fullName>
        <label>Rate Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Requested_Ship_Date__c</fullName>
        <inlineHelpText>Date to ship out from warehouse</inlineHelpText>
        <label>Requested Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <defaultValue>&apos;Open&apos;</defaultValue>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Partially_Allocated</fullName>
                    <label>Partially Allocated</label>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                    <isActive>false</isActive>
                    <label>Closed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Stock_Disposition__c</fullName>
        <label>Stock Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Return to Stock</fullName>
                </value>
                <value>
                    <fullName>Return to Exchange Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>inscor__Warehouse__c</referenceTo>
        <relationshipLabel>Sales Order Lines</relationshipLabel>
        <relationshipName>Sales_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Order Line</label>
    <nameField>
        <displayFormat>SOL-{0}</displayFormat>
        <label>Sales Order Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>inscor__Cancelled_Status_Restriction</fullName>
        <active>true</active>
        <errorConditionFormula>AND(inscor__Quantity_Allocated__c +  inscor__Quantity_Shipped__c + inscor__Quantity_Invoiced__c &gt; 0, ISPICKVAL( inscor__Status__c , &apos;Cancelled&apos;) )</errorConditionFormula>
        <errorMessage>You can not change status to cancelled, if sum of Quantity Allocated, Quantity Shipped and Quantity Invoiced is greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Cannot_change_CC_once_allocated</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISCHANGED( inscor__Condition_Code__c ),  inscor__Quantity_Allocated__c &gt; 0)</errorConditionFormula>
        <errorMessage>Cannot change Condition Code once allocated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Cannot_change_Part_Number_once_allocated</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(  inscor__Product__c  ),  inscor__Quantity_Allocated__c &gt; 0)</errorConditionFormula>
        <errorMessage>Cannot change Part Number once allocated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Cannot_change_quantity_less_than_alloc</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISCHANGED(   inscor__Quantity_Ordered__c   ),  inscor__Quantity_Allocated__c &gt;  inscor__Quantity_Ordered__c )</errorConditionFormula>
        <errorMessage>Cannot change quantity ordered to less than allocated amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Check_Quantity_on_Update</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
inscor__Quantity_Ordered__c &lt; ( inscor__Quantity_Shipped__c + inscor__Quantity_Allocated__c), NOT(ISPICKVAL(inscor__Order_Type__c , &apos;Credit&apos; )))</errorConditionFormula>
        <errorMessage>Quantity Ordered cannot be less than Quantity Shipped + Quantity Allocated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Closed_Status_Restriction</fullName>
        <active>true</active>
        <errorConditionFormula>AND(inscor__Quantity_Ordered__c != inscor__Quantity_Shipped__c, ISPICKVAL( inscor__Status__c , &apos;Closed&apos;) )</errorConditionFormula>
        <errorMessage>You can only set status to closed when Quantity Ordered = Quantity Shipped</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Exchange_fields_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( inscor__Order_Type__c , &apos;Exchange&apos;) , OR( ISPICKVAL(inscor__Exchange_Type__c , &quot;&quot;), ISBLANK(inscor__Outright_Price__c), ISBLANK(inscor__Core_Due__c), AND(NOT(ISNEW()),ISPICKVAL(inscor__Core_Disposition__c , &quot;&quot;)),AND(NOT(ISNEW()),ISPICKVAL(inscor__Stock_Disposition__c , &quot;&quot;)) ))</errorConditionFormula>
        <errorMessage>For Exchange orders, Outright price, Core Due, Core Disposition, and Stock Disposition are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Part_Number_Required</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Product__c == null</errorConditionFormula>
        <errorMessage>Part Number is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Prevent_Changing_Order_Type_Once_Shipped</fullName>
        <active>true</active>
        <errorConditionFormula>AND(inscor__Quantity_Shipped__c &gt; 0, ISCHANGED( inscor__Order_Type__c ))</errorConditionFormula>
        <errorMessage>Can&apos;t change Order Type once line is Shipped.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Quantity_Check</fullName>
        <active>false</active>
        <errorConditionFormula>inscor__Quantity_Ordered__c &lt; 0</errorConditionFormula>
        <errorMessage>Negative values not allowed for Quantity Ordered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Restrict_Sales_by_Condition_Code</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c)), OR(
INCLUDES( inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c, &apos;All&apos;), 
AND(inscor__Condition_Code__r.Name == &apos;AR&apos;, NOT(INCLUDES( inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c,&apos;AR&apos;))), 
AND(inscor__Condition_Code__r.Name == &apos;NS&apos;, NOT(INCLUDES( inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c,&apos;NS&apos;))),
AND(inscor__Condition_Code__r.Name == &apos;FN&apos;, NOT(INCLUDES( inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c,&apos;FN&apos;))),
AND(inscor__Condition_Code__r.Name == &apos;OH&apos;, NOT(INCLUDES( inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c,&apos;OH&apos;))),
AND(inscor__Condition_Code__r.Name == &apos;NE&apos;, NOT(INCLUDES( inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c,&apos;NE&apos;))),
AND(inscor__Condition_Code__r.Name == &apos;BER&apos;, NOT(INCLUDES( inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c,&apos;BER&apos;))),
AND(inscor__Condition_Code__r.Name == &apos;SV&apos;, NOT(INCLUDES( inscor__Product__r.inscor__Restrict_Sales_to_Condition_Code__c,&apos;SV&apos;)))))</errorConditionFormula>
        <errorMessage>Part Number is restricted from sale in the selected condition code.</errorMessage>
    </validationRules>
</CustomObject>